--- a/HPMC_Tetrahedra.ipynb
+++ b/HPMC_Tetrahedra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,41 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HOOMD-blue 2.5.2 CUDA (10.1) DOUBLE HPMC_MIXED MPI TBB SSE SSE2 SSE3 SSE4_1 SSE4_2 AVX \n",
-      "Compiled: 05/03/2019\n",
-      "Copyright (c) 2009-2019 The Regents of the University of Michigan.\n",
-      "-----\n",
-      "You are using HOOMD-blue. Please cite the following:\n",
-      "* J A Anderson, C D Lorenz, and A Travesset. \"General purpose molecular dynamics\n",
-      "  simulations fully implemented on graphics processing units\", Journal of\n",
-      "  Computational Physics 227 (2008) 5342--5359\n",
-      "* J Glaser, T D Nguyen, J A Anderson, P Liu, F Spiga, J A Millan, D C Morse, and\n",
-      "  S C Glotzer. \"Strong scaling of general-purpose molecular dynamics simulations\n",
-      "  on GPUs\", Computer Physics Communications 192 (2015) 97--107\n",
-      "-----\n",
-      "-----\n",
-      "You are using HPMC. Please cite the following:\n",
-      "* J A Anderson, M E Irrgang, and S C Glotzer. \"Scalable Metropolis Monte Carlo\n",
-      "  for simulation of hard shapes\", Computer Physics Communications 204 (2016) 21\n",
-      "  --30\n",
-      "-----\n",
-      "HOOMD-blue is running on the CPU\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<hoomd.context.SimulationContext at 0x7f54fa8c4fd0>"
+       "<hoomd.context.SimulationContext at 0x13612f080>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -80,30 +55,30 @@
     {
      "data": {
       "text/plain": [
-       "<hoomd.data.system_data at 0x7f551c577c50>"
+       "<hoomd.data.system_data at 0x135cc3908>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hoomd.init.create_lattice(unitcell=hoomd.lattice.sc(a=5),n=5)"
+    "hoomd.init.create_lattice(unitcell=hoomd.lattice.sc(a=3),n=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = hoomd.hpmc.integrate.convex_polyhedron(seed=1, d=0.4, a=0.4)"
+    "mc = hoomd.hpmc.integrate.convex_polyhedron(seed=1, d=0.1, a=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.dump_state(obj=mc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hoomd.analyze.log at 0x7f54fa8a5320>"
+       "<hoomd.analyze.log at 0x13616cfd0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -170,15 +154,15 @@
      "output_type": "stream",
      "text": [
       "** starting run **\n",
-      "Time 00:00:53 | Step 100 / 100 | TPS 182.173 | ETA 00:00:00\n",
-      "Average TPS: 181.803\n",
+      "Time 00:00:33 | Step 10000 / 10000 | TPS 1424.9 | ETA 00:00:00\n",
+      "Average TPS: 1424.65\n",
       "---------\n",
       "notice(2): -- HPMC stats:\n",
-      "notice(2): Average translate acceptance: 0.99136\n",
-      "notice(2): Average rotate acceptance:    0.9878\n",
-      "notice(2): Trial moves per second:        90709.9\n",
-      "notice(2): Overlap checks per second:     2.1823e+06\n",
-      "notice(2): Overlap checks per trial move: 24.058\n",
+      "notice(2): Average translate acceptance: 0.979221\n",
+      "notice(2): Average rotate acceptance:    0.969532\n",
+      "notice(2): Trial moves per second:        712215\n",
+      "notice(2): Overlap checks per second:     3.21336e+07\n",
+      "notice(2): Overlap checks per trial move: 45.1179\n",
       "notice(2): Number of overlap errors:      0\n",
       "-- Cell list stats:\n",
       "Dimension: 0, 0, 0\n",
@@ -187,7 +171,7 @@
     }
    ],
    "source": [
-    "hoomd.run(100)"
+    "hoomd.run(10000)"
    ]
   },
   {
